app/src/pages/chat/OnChainAssetWidget/index.less
.on_chain_assets {
  // always float on top
  position: fixed;
  top: 70%;
  width: 100%;
  z-index: 999;
  display: flex;
  background-color: rgba(255, 255, 255, 0.3);
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 10px;
  height: 150px;
}

.asset {
  margin: 10px 5px;
  width: 150px;
  border-radius: 10px;
  justify-content: center;
  align-content: center;
  overflow: hidden;
  text-align:center;
  background-color: white;
}

.asset_img {
  max-width: 100%;
  max-height: 100%
}

.asset_info {

}


.coin_root {
  position: absolute;
  top: 130px;
  left: 0px;
  z-index: 1000;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  height: 54px;
  width: 210px;
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 10px;
  border-color: aqua;
  border-width: 2em;
}

.coin_card {
  position: relative;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  z-index: 500;
}

.coin_img_container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.coin_item_img {
  width: 20px;
  height: 20px;
  color: rgb(0, 0, 0);
  background: rgb(255, 255, 255);
  border-radius: 24px;
  cursor: pointer;
}

.coin_item_value_text {
  position: relative;
  top: 5px;
  width: 100%;
  font-size: 10px;
  text-align: center;
}

